--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
 
     <footer class="footer">Created by Jovana Raskovic &copy; 2021 <span>mindUnleashed</span><p>Source:<img src="./assets/tmdb.svg" alt="TMDB logo"></p></footer>
 
-    <script src="../src/nav.js"></script>
+    <script src="./src/nav.js"></script>
 </body>
 </html>
